@@ -1,3 +1,10 @@
+2007-10-16  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-utils.c: (check_menu_sens):
+	* src/baobab.c: (start_proc_on_dir), (main):
+	* src/baobab.h:
+        BUGZILLA #487123 - allocated space option works only once
+
 2007-09-09  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/callbacks.c: (on_about_activate):
